[package]
name = "cw_parser"
version = "0.1.0"
edition = "2018"
authors = ["Charles Ede <charlieede01@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
anyhow = "1.0"
regex = "1.4.2"
recap = "0.1.1"
