[package]
name = "cw_parser"
version = "0.1.2"
edition = "2018"
authors = ["Klaatu01"]
repository = "https://github.com/klaatu01/cw_parser"
description = "Parse cloudwatch logs in json format into something more useful"
readme = "README.md"
license = "MIT"
keywords = ["cloudwatch", "logs", "parse"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
anyhow = "1.0"
regex = "1.4.2"
recap = "0.1.1"
rusoto_logs = "0.47.0"
chrono = "0.4.0"
